[package]
name = "denc-derive"
version = "0.1.0"
authors = ["Vova <vova616@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[lib]
proc-macro = true
name = "denc_derive"
path = "src/lib.rs"
doctest = false


[dependencies]
syn = {version = "^1.0.0", features = ["full"]}
quote = "^1.0.0"
proc-macro2 = "0.4"


