[package]
name = "denc-test"
version = "0.1.0"
authors = ["Vova <vova616@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1


[dependencies]
smallvec = "0.6.9"
denc-derive = { path = "../denc-derive"}
denc = { path = "../denc"}
rand = "0.6"
